feat: list databases (WIP)
